fix scrollbar

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -16,6 +16,10 @@
     padding: 0.625rem 0.7rem;
   }
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
 textarea {
   background: #1c2833;
   @apply p-3 w-full text-gray-400 focus:outline-none;
